# OMXLib

./: CMakeLists.txt  LICENSE
lib/: CMakeLists.txt
lib/include/: OmxAttributeCollection.hpp  OmxCommon.hpp  OmxException.hpp  OmxFile.hpp  OmxMatrix.hpp  OmxPlatform.hpp  OmxZonalReference.hpp
lib/src/: H5Scoped.hpp  OmxAttributeCollection.cpp  OmxAttributeOwnerData.hpp  OmxCommon.cpp  OmxFile.cpp  OmxFileOwnerData.hpp  OmxH5Common.cpp  OmxH5Common.hpp  OmxMatrix.cpp  OmxZonalReference.cpp
omxbench/: CMakeLists.txt
omxbench/src/: omxbench.cpp
